platform/network-policies/base/argocd-server-ingress.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: argocd-server-ingress
  namespace: argocd
spec:
  endpointSelector:
    matchLabels:
      k8s:app.kubernetes.io/name: argocd-server
  ingress:
    - fromEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: kube-system
            k8s:app.kubernetes.io/name: cilium-envoy
      toPorts:
        - ports:
            - port: "8080"
              protocol: TCP
